[package]
name = "wipe-on-fork"
version = "0.2.1"
authors = ["Weikeng Chen <weikeng.chen@l2iterative.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A replacement to OnceCell, LazyCell, Once, OnceLock, LazyLock that wipes itself when being forked in Unix"
documentation = "https://docs.rs/wipe-on-fork"
repository = "https://github.com/l2iterative/wipe-on-fork"
readme = "README.md"

[lib]
crate-type = ["dylib", "rlib"]

[profile.dev]
opt-level = 3

[dependencies]
libc = "0.2.152"
